--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button><img src="img/search.png" alt="Search"></button>
         </div>
         <div class="error">
-            <p>Invalid city name</p>
+            <p>Invalid city name: Try again</p>
         </div>
         <div class="weather">
             <img src="img/rain.png" alt="Rain" class="weather-icon">
